add radio buttons

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <RadioGroup
+        android:layout_width="269dp"
+        android:layout_height="216dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="416dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <RadioButton
+            android:id="@+id/radioButtonFirst"
+            android:layout_width="228dp"
+            android:layout_height="wrap_content"
+            android:text="@string/FirstYearStudent" />
+
+        <RadioButton
+            android:id="@+id/radioButtonSophomore"
+            android:layout_width="229dp"
+            android:layout_height="wrap_content"
+            android:text="@string/Sophomore" />
+
+        <RadioButton
+            android:id="@+id/radioButtonJunior"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Junior" />
+
+        <RadioButton
+            android:id="@+id/radioButtonSenior"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="@string/Senior" />
+    </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
